--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -76,7 +76,7 @@ body{
 
 /* Boton de follow and unfollow */
 .hidden{
-	visibility: hidden
+  display: none !important;
 }
 
 /* Iconos */
@@ -139,7 +139,9 @@ body{
     opacity: 0.7;
 }
 
-
+.ed-opts{
+    list-style:none;
+}
 #option{
     cursor: pointer;
 }
@@ -151,6 +153,16 @@ body{
     transition: all 300ms;
 }
 
+.cli{
+    cursor: pointer;
+}
+
+.start .btn-start:hover{
+    color:red ¡important; 
+}
+.start .active{
+    color: red;
+}
 
 
 /* ---------------------------------------------------------------------------------------------------------Miembros */
