--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -26,7 +26,9 @@
                          {%endif%}
 					</div>
 					<div class="user-item-content">
-						<p>{{ user.name }}{{ user.surname }} - {{ user.nick }}</p>
+						<a href="{{ path('user_profile', {'nickname':user.nick}) }}">
+							<p>{{ user.name }}{{ user.surname }} - {{ user.nick }}</p>
+						</a>
 						<p>{{ user.bio }}</p>
 					</div>
 					{% if app.user.id != user.id %}
@@ -64,204 +66,204 @@
 		<div>
 	</div>
 	</div>
-	<section class="companies-info">
-			<div class="container">
-				<div class="company-title">
-					<h3>Total de Miembros {{ pagination.getTotalItemCount }}</h3>
-				</div><!--company-title end-->
-				<div class="companies-list">
-					<div class="row">
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon1.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon2.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon3.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon4.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon5.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon6.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon7.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon8.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon9.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon10.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon11.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
-							<div class="company_profile_info">
-								<div class="company-up-info">
-									<img src="images/resources/pf-icon12.png" alt="">
-									<h3>John Doe</h3>
-									<h4>Graphic Designer</h4>
-									<ul>
-										<li><a href="#" title="" class="follow">Follow</a></li>
-										<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
-										<li><a href="#" title="" class="hire-us">Hire</a></li>
-									</ul>
-								</div>
-								<a href="#" title="" class="view-more-pro">View Profile</a>
-							</div><!--company_profile_info end-->
-						</div>
+<!-- 	<section class="companies-info">
+		<div class="container">
+			<div class="company-title">
+				<h3>Total de Miembros {{ pagination.getTotalItemCount }}</h3>
+			</div>company-title end
+			<div class="companies-list">
+				<div class="row">
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon1.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
 					</div>
-				</div><!--companies-list end-->
-				<div class="process-comm">
-					<div class="spinner">
-						<div class="bounce1"></div>
-						<div class="bounce2"></div>
-						<div class="bounce3"></div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon2.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
 					</div>
-				</div><!--process-comm end-->
-			</div>
-		</section>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon3.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon4.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon5.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon6.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon7.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon8.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon9.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon10.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon11.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-12">
+						<div class="company_profile_info">
+							<div class="company-up-info">
+								<img src="images/resources/pf-icon12.png" alt="">
+								<h3>John Doe</h3>
+								<h4>Graphic Designer</h4>
+								<ul>
+									<li><a href="#" title="" class="follow">Follow</a></li>
+									<li><a href="#" title="" class="message-us"><ion-icon name="mail"></ion-icon></a></li>
+									<li><a href="#" title="" class="hire-us">Hire</a></li>
+								</ul>
+							</div>
+							<a href="#" title="" class="view-more-pro">View Profile</a>
+						</div>company_profile_info end
+					</div>
+				</div>
+			</div>companies-list end
+			<div class="process-comm">
+				<div class="spinner">
+					<div class="bounce1"></div>
+					<div class="bounce2"></div>
+					<div class="bounce3"></div>
+				</div>
+			</div>process-comm end
+		</div>
+	</section> -->
 
 	
 {% endblock %}
